[Angus] Fix display of map on mobile; auth links on front page

--- a/web/cobrands/angus/base.scss
+++ b/web/cobrands/angus/base.scss
@@ -52,7 +52,7 @@ ol.big-numbers > li:before {
   display: none;
 }
 
-.container__breadcrumb {
+.wrapper__breadcrumb, .wrapper__main_menu {
   display: none;
 }
 
