--- a/web/cobrands/angus/layout.scss
+++ b/web/cobrands/angus/layout.scss
@@ -38,6 +38,7 @@ body.twothirdswidthpage #site-logo,
 
   .container {
     position: relative;
+    min-height: 5em;
   }
 
   form.form__search {
@@ -173,8 +174,15 @@ body.frontpage {
     }
   }
   #user-meta p {
-    right: -124px;
-    top: -104px;
+    right: -119px;
+    top: -93px;
+    margin: 0;
+    padding: 0;
+    color: $base_bg;
+
+    a {
+      position: static;
+    }
   }
 }
 
@@ -370,6 +378,10 @@ body.mappage {
 
     form.form__search {
       display: none;
+    }
+
+    .container {
+      min-height: 4em;
     }
   }
 
